syntax = "proto3";

package post;

option go_package = "/post";


service PostService {
      rpc NewPost(NewPostRequest) returns (NewPostResponse);
      rpc GetPost(GetPostRequest) returns (GetPostResponse);
      rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}


// delete
message DeletePostRequest {
      uint64 postId = 1;
      uint64 userId = 2;
}
message DeletePostResponse {}
//

// get
message GetPostRequest {
      uint64 requestorId  = 1;
      repeated uint64 ids = 2;
}
message User {
      string name   = 1;
      string email  = 2;
      string gender = 4;
      uint64 id     = 3;
}
message Post {
      string title     = 1;
      string body      = 2;
      uint64 id        = 3;
      uint64 ownerId   = 4;
      bool isFollowing = 5;
      User   user      = 6;
}
message GetPostResponse {
      repeated Post posts = 1;
}
//

// new
message NewPostRequest {
      string title  = 1;
      string body   = 2;
      uint64 userId = 3;
}
message NewPostResponse { uint64 id = 1; }
//
